--- a/.github/workflows/create-jira-issue.yml
+++ b/.github/workflows/create-jira-issue.yml
@@ -76,8 +76,11 @@ jobs:
           ISSUE_NUMBER="${{ steps.create.outputs.issue }}"
           BRANCH_TYPE="${{ steps.issue-parser.outputs.issueparser_branchType }}"
           ISSUE_TITLE="${{ steps.issue-parser.outputs.issueparser_branch }}"
-          SLUG_TITLE=$(echo "${ISSUE_TITLE}" | sed 's/ /-/g' | tr '[:upper:]' '[:lower:]')
-          BRANCH_NAME="${BRANCH_TYPE}/${ISSUE_NUMBER}-${SLUG_TITLE}"
+          if [ -z "$BRANCH_TYPE" ]; then
+            BRANCH_TYPE="feature"
+          fi
+          
+          BRANCH_NAME="${BRANCH_TYPE}/${ISSUE_NUMBER}"
           git checkout -b "${BRANCH_NAME}"
           git push origin "${BRANCH_NAME}"
 
