--- a/.github/workflows/create-jira-issue.yml
+++ b/.github/workflows/create-jira-issue.yml
@@ -53,7 +53,7 @@ jobs:
         uses: atlassian/gajira-create@v3
         with:
           project: LUV
-          issuetype: Subtask
+          issuetype: 하위 작업
           summary: '[BE] ${{ github.event.issue.title }}'
           description: '${{ steps.md2jira.outputs.output-text }}'
           fields: |
